--- a/概述.md
+++ b/概述.md
@@ -1,4 +1,4 @@
-Unity 的 Shader 能够以以下三种方式编写：
+Unity 的 shader 能够以以下三种方式编写：
 - 作为 surface shaders
 - 作为 vertex and fragment shaders
 - 作为 fixed function shaders(只能用 ShaderLab 写)
@@ -25,4 +25,4 @@ Shader "MyShader" {
 }
 ```
 
-Unity Shader 跟渲染流水线的 Shader 有很大不同。
+Unity shader 跟渲染流水线的 shader 有很大不同。
