--- a/概述.md
+++ b/概述.md
@@ -1,28 +1,8 @@
+Unity shader 跟渲染流水线的 shader 有很大不同。
+
 Unity 的 shader 能够以以下三种方式编写：
 - 作为 surface shaders
 - 作为 vertex and fragment shaders
-- 作为 fixed function shaders(只能用 ShaderLab 写)
+- 作为 fixed function shaders
 
-不管是采用哪种方式写的 shader, 都需要封装在 ShaderLab 语言里，其典型的结构如下：
-
-```
-Shader "MyShader" {
-    Properties {
-        _MyTexture ("My Texture", 2D) = "white" { }
-        // other properties like colors or vectors go here as well
-    }
-    SubShader {
-        // here goes the 'meat' of your
-        // - surface shader or
-        // - vertex and program shader or
-        // - fixed function shader
-    }
-    SubShader {
-        // here goes a simpler version of the SubShader
-        // above than can run on older graphics cards
-    }
-    Fallback "VertexLit"
-}
-```
-
-Unity shader 跟渲染流水线的 shader 有很大不同。
+不管采用哪种方式写 shader, 都需要封装在 ShaderLab 语言里。
